Add TableViewController file

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -79,13 +79,13 @@
                         <color key="backgroundColor" red="1" green="0.51726987395265156" blue="0.16096429904162146" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="hhL-Fi-vnD" firstAttribute="top" secondItem="Bfy-m0-Fb7" secondAttribute="bottom" constant="20" id="0he-hG-q0c"/>
+                            <constraint firstItem="6Bx-d5-fnw" firstAttribute="centerX" secondItem="a5a-bX-sXX" secondAttribute="centerX" id="3Zf-sw-KIA"/>
                             <constraint firstItem="6Bx-d5-fnw" firstAttribute="top" secondItem="a5a-bX-sXX" secondAttribute="bottom" constant="-16" id="6Ul-7o-uZU"/>
                             <constraint firstItem="fup-qy-o1s" firstAttribute="centerX" secondItem="wnJ-zD-kJU" secondAttribute="centerX" id="9Bq-UL-Yab"/>
                             <constraint firstItem="wnJ-zD-kJU" firstAttribute="centerX" secondItem="a5a-bX-sXX" secondAttribute="centerX" id="BRu-ym-9li"/>
                             <constraint firstItem="wnJ-zD-kJU" firstAttribute="top" secondItem="fup-qy-o1s" secondAttribute="bottom" constant="8" id="DBd-Kl-RwO"/>
                             <constraint firstItem="a5a-bX-sXX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="200" id="Fm9-6l-BAF"/>
                             <constraint firstItem="gmh-RJ-Y18" firstAttribute="top" secondItem="hhL-Fi-vnD" secondAttribute="bottom" constant="17" id="Hco-D5-G3u"/>
-                            <constraint firstItem="6Bx-d5-fnw" firstAttribute="centerX" secondItem="a5a-bX-sXX" secondAttribute="centerX" id="Kdr-WL-8KN"/>
                             <constraint firstItem="Bfy-m0-Fb7" firstAttribute="top" secondItem="a5a-bX-sXX" secondAttribute="bottom" constant="17" id="LtX-vc-6Za"/>
                             <constraint firstItem="a5a-bX-sXX" firstAttribute="top" secondItem="wnJ-zD-kJU" secondAttribute="bottom" constant="13" id="Qxy-60-rkB"/>
                             <constraint firstItem="Bfy-m0-Fb7" firstAttribute="top" secondItem="a5a-bX-sXX" secondAttribute="bottom" constant="17" id="TdL-iZ-j6B"/>
@@ -114,7 +114,7 @@
         <!--Item-->
         <scene sceneID="2OC-gT-azV">
             <objects>
-                <viewController id="CFK-J0-0SZ" sceneMemberID="viewController">
+                <viewController id="CFK-J0-0SZ" customClass="ListTableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xoM-OP-aIi"/>
                         <viewControllerLayoutGuide type="bottom" id="TRJ-UD-fuo"/>
@@ -135,19 +135,51 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A9P-oj-7AV">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A9P-oj-7AV">
                                 <rect key="frame" x="0.0" y="64" width="600" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Tjc-fi-MV3">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemCell" id="Tjc-fi-MV3" customClass="ListCustomCell" customModule="OnTheMap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tjc-fi-MV3" id="p40-6f-1o7">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pin" translatesAutoresizingMaskIntoConstraints="NO" id="Yjm-Yc-JcP">
+                                                    <rect key="frame" x="24" y="4" width="42" height="43"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="42" id="N9J-OO-ysH"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PuB-06-uuC">
+                                                    <rect key="frame" x="90" y="0.0" width="467" height="51"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Yjm-Yc-JcP" firstAttribute="leading" secondItem="p40-6f-1o7" secondAttribute="leading" constant="24" id="8zN-Rg-xoG"/>
+                                                <constraint firstAttribute="bottom" secondItem="Yjm-Yc-JcP" secondAttribute="bottom" constant="12" id="EKZ-cI-Xsc"/>
+                                                <constraint firstItem="PuB-06-uuC" firstAttribute="leading" secondItem="Yjm-Yc-JcP" secondAttribute="trailing" constant="24" id="Mj9-Vj-Mwe"/>
+                                                <constraint firstAttribute="trailing" secondItem="PuB-06-uuC" secondAttribute="trailing" constant="43" id="aSF-i5-QM1"/>
+                                                <constraint firstAttribute="bottom" secondItem="PuB-06-uuC" secondAttribute="bottom" constant="8" id="hzZ-qK-C4a"/>
+                                                <constraint firstItem="Yjm-Yc-JcP" firstAttribute="top" secondItem="p40-6f-1o7" secondAttribute="top" constant="4" id="lcS-J9-q0n"/>
+                                                <constraint firstItem="PuB-06-uuC" firstAttribute="leading" secondItem="Yjm-Yc-JcP" secondAttribute="trailing" constant="24" id="mZW-W3-AAJ"/>
+                                                <constraint firstItem="PuB-06-uuC" firstAttribute="top" secondItem="p40-6f-1o7" secondAttribute="top" id="qby-ko-q6B"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellImage" destination="Yjm-Yc-JcP" id="btr-Sz-kae"/>
+                                            <outlet property="nameLabel" destination="PuB-06-uuC" id="3Tv-3r-My8"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="CFK-J0-0SZ" id="GHt-MN-vLZ"/>
+                                    <outlet property="delegate" destination="CFK-J0-0SZ" id="h3r-Ma-2hX"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -163,6 +195,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" image="list" id="cE3-zw-dR6"/>
+                    <connections>
+                        <outlet property="listTableView" destination="A9P-oj-7AV" id="EvO-y3-8IS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZsH-gK-TIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
